# vp-kuljetus-vehicle-data-receiver

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  compose.yaml  generate-client.sh
.github/workflows/: develop-publish-docker-image.yaml  master-publish-docker-image.yaml  publish-docker-image.yaml  run-tests.yaml
migrations/: 20250819090000_init_schema.down.sql  20250819090000_init_schema.up.sql
src/: lib.rs  listener.rs  main.rs
src/failed_events/: mod.rs
src/telematics_cache/: cache_handler.rs  cacheable_truck_speed.rs  mod.rs
src/teltonika/: mod.rs
src/teltonika/connection/: mod.rs
src/teltonika/events/: driver_one_card_event_handler.rs  driver_one_card_id_event_handler.rs  driver_one_card_inserted_event_handler.rs  mod.rs  speed_event_handler.rs  (+6 more)
src/teltonika_connection/: mod.rs
src/teltonika_event_handler/: mod.rs  speed_event_handler.rs
src/teltonika_handler/: driver_one_card_id_event_handler.rs  driver_one_drive_state_event_handler.rs  mod.rs  speed_event_handler.rs  teltonika_event_handlers.rs  teltonika_records_handler.rs  teltonika_vin_handler.rs
src/test_utils/: avl_frame_builder.rs  avl_packet.rs  avl_record_builder.rs  mod.rs
src/tests/: integration_tests.rs
src/utils/: api.rs  avl_frame_builder.rs  avl_packet.rs  avl_record_builder.rs  imei.rs  mod.rs  test_utils.rs  trackable_cache_item.rs
src/vehicle_management_service/: mod.rs
src/worker/: mod.rs
tests/: fmc234_temperature_tests.rs  fmc650_driver_one_tests.rs  fmc650_location_tests.rs  fmc650_odometer_tests.rs  fmc650_speed_tests.rs  lib.rs
tests/test_utils/: avl_test_utils.rs  data_receiver_test_container.rs  mod.rs  mysql_test_container.rs  tms_services_mock.rs  tms_services_test_container.rs  wiremock_client.rs
vehicle-management-service/: Cargo.toml  README.md
vehicle-management-service/src/: lib.rs  model.rs  request.rs
vehicle_management_service/: Cargo.toml
vehicle_management_service/.openapi-generator/: FILES
vehicle_management_service/src/: lib.rs  model.rs  request.rs
vehicle_management_service_client/: Cargo.toml  README.md
vehicle_management_service_client/src/: lib.rs  model.rs  request.rs
(+79 files in other folders)
