[package]
name = "vp-kuljetus-vehicle-data-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.33"
env_logger = "0.10.0"
log = "0.4.20"
nom-teltonika = { version = "0.1.4", features = ["serde", "tokio"] }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.33.0", features = ["full", "tracing"] }

[dev-dependencies]
httpmock = "0.7.0"
rand = "0.8.5"
tempfile = "3.10.1"

[dependencies.vehicle-management-service-client]
path = "./vehicle_management_service_client"
