[package]
name = "vp-kuljetus-vehicle-data-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.33"
env_logger = "0.10.0"
imei = "1.1.1"
lazy_static = "1.5.0"
log = "0.4.20"
nom-teltonika = { version = "=0.1.5", features = ["serde", "tokio"] }
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.33.0", features = ["full", "tracing", "io-util"] }
uuid = { version = "1.8.0", features = ["v4"] }
futures = { version = "0.3", default-features = false }

[dev-dependencies]
httpmock = "0.7.0"
rand = "0.8.5"
tempfile = "3.10.1"
tokio-test = "0.4.4"
testcontainers = "0.25.0"
anyhow = "1.0.98"

[dependencies.vehicle-management-service]
path = "./vehicle_management_service"
